Library/AXL(Library)/Dynamic Link/DAXC.h

typedef DWORD    PASCAL EXPORT funcAxcSignalWriteOutput(long lChannelNo, DWORD dwOutput);
typedef DWORD    PASCAL EXPORT funcAxcSignalReadOutput(long lChannelNo, DWORD* dwpOutput);
typedef DWORD    PASCAL EXPORT funcAxcSignalWriteOutputBit(long lChannelNo, long lBitNo, DWORD uOnOff);
typedef DWORD    PASCAL EXPORT funcAxcSignalReadOutputBit(long lChannelNo,long lBitNo, DWORD *upOnOff);
typedef DWORD    PASCAL EXPORT funcAxcSignalReadInput(long lChannelNo, DWORD* dwpInput);
typedef DWORD    PASCAL EXPORT funcAxcSignalReadInputBit(long lChannelNo, long lBitNo, DWORD *upOnOff);
typedef DWORD    PASCAL EXPORT funcAxcMotSetMoveUnitPerPulse(long lChannelNo, double dMoveUnitPerPulse);
typedef DWORD    PASCAL EXPORT funcAxcTriggerSetBlockUpperPos(long lChannelNo, double dUpperPosition);
typedef DWORD    PASCAL EXPORT funcAxcTriggerGetBlockUpperPos(long lChannelNo, double* dpUpperrPosition);
typedef DWORD    PASCAL EXPORT funcAxcTriggerSetPosPeriod(long lChannelNo, double dPeriod);
typedef DWORD    PASCAL EXPORT funcAxcTriggerGetPosPeriod(long lChannelNo, double* dpPeriod);
typedef DWORD    PASCAL EXPORT funcAxcTriggerSetDirectionCheck(long lChannelNo, DWORD dwDirection);
typedef DWORD    PASCAL EXPORT funcAxcTriggerGetDirectionCheck(long lChannelNo, DWORD* dwpDirection);
typedef DWORD    PASCAL EXPORT funcAxcTriggerSetBlock(long lChannelNo, double dLower, double dUpper, double dABSod);
typedef DWORD    PASCAL EXPORT funcAxcTriggerGetBlock(long lChannelNo, double *dpLower, double *dpUpper, double *dpABSod);
typedef DWORD    PASCAL EXPORT funcAxcTriggerSetTime(long lChannelNo, double dTrigTime);
typedef DWORD    PASCAL EXPORT funcAxcTriggerGetTime(long lChannelNo, double* dpTrigTime);
typedef DWORD    PASCAL EXPORT funcAxcTriggerSetLevel(long lChannelNo, DWORD dwLevel);
typedef DWORD    PASCAL EXPORT funcAxcTriggerGetLevel(long lChannelNo, DWORD* dwpLevel);
typedef DWORD    PASCAL EXPORT funcAxcTriggerSetFreq(long lChannelNo, DWORD dwFreqency);
typedef DWORD    PASCAL EXPORT funcAxcTriggerGetFreq(long lChannelNo, DWORD* dwpFreqency);
	
typedef DWORD    PASCAL EXPORT funcAxcTriggerSetEnable(long lChannelNo, DWORD dwUsage);
typedef DWORD    PASCAL EXPORT funcAxcTriggerGetEnable(long lChannelNo, DWORD* dwpUsage);
typedef DWORD    PASCAL EXPORT funcAxcTriggerReadAbsRamData(long lChannelNo, DWORD dwAddr, DWORD* dwpData);
typedef DWORD    PASCAL EXPORT funcAxcTriggerWriteAbsRamData(long lChannelNo, DWORD dwAddr, DWORD dwData);
typedef DWORD    PASCAL EXPORT funcAxcTriggerSetAbs(long lChannelNo, DWORD dwTrigNum, DWORD* dwTrigPos, DWORD dwDirection);
extern funcAxcSignalWriteOutput                         *AxcSignalWriteOutput;
extern funcAxcSignalReadOutput                          *AxcSignalReadOutput;
extern funcAxcSignalWriteOutputBit                      *AxcSignalWriteOutputBit;
extern funcAxcSignalReadOutputBit                       *AxcSignalReadOutputBit;
extern funcAxcSignalReadInput                           *AxcSignalReadInput;
extern funcAxcSignalReadInputBit                        *AxcSignalReadInputBit;
extern funcAxcMotSetMoveUnitPerPulse                    *AxcMotSetMoveUnitPerPulse;
extern funcAxcTriggerSetBlockUpperPos                   *AxcTriggerSetBlockUpperPos;
extern funcAxcTriggerGetBlockUpperPos                   *AxcTriggerGetBlockUpperPos;
extern funcAxcTriggerSetPosPeriod                       *AxcTriggerSetPosPeriod;
extern funcAxcTriggerGetPosPeriod                       *AxcTriggerGetPosPeriod;
extern funcAxcTriggerSetDirectionCheck                  *AxcTriggerSetDirectionCheck;
extern funcAxcTriggerGetDirectionCheck                  *AxcTriggerGetDirectionCheck;
extern funcAxcTriggerSetBlock                           *AxcTriggerSetBlock;
extern funcAxcTriggerGetBlock                           *AxcTriggerGetBlock;
extern funcAxcTriggerSetTime                            *AxcTriggerSetTime;
extern funcAxcTriggerGetTime                            *AxcTriggerGetTime;
extern funcAxcTriggerSetLevel                           *AxcTriggerSetLevel;
extern funcAxcTriggerGetLevel                           *AxcTriggerGetLevel;
extern funcAxcTriggerSetFreq                            *AxcTriggerSetFreq;
extern funcAxcTriggerGetFreq                            *AxcTriggerGetFreq;
extern funcAxcTriggerSetEnable                          *AxcTriggerSetEnable;
extern funcAxcTriggerGetEnable                          *AxcTriggerGetEnable;
extern funcAxcTriggerReadAbsRamData                     *AxcTriggerReadAbsRamData;
extern funcAxcTriggerWriteAbsRamData                    *AxcTriggerWriteAbsRamData;
extern funcAxcTriggerSetAbs                             *AxcTriggerSetAbs;