Library/AXL(Library)/Visual Basic/AXC.bas


' Verifying upper limit value of trigger output range of counter module.
' Setting upper limit value of range to generate trigger output with position period.(In the case of position period trigger product).
' In the case of the product of absolute position trigger, used as location where trigger information is applied of last address of RAM(Trigger information was set).
' Unit : Setting from 'AxcMotSetMoveUnitPerPulse'
' Note : Upper limit value should be set bigger than lower limit value.
Public Declare Function AxcTriggerSetBlockUpperPos Lib "AXL.dll" (ByVal lChannelNo As Long, ByVal dUpperPosition As Double) As Long
' Setting lower limit value of trigger output range of counter module.
Public Declare Function AxcTriggerGetBlockUpperPos Lib "AXL.dll" (ByVal lChannelNo As Long, ByRef dpUpperrPosition As Double) As Long


' Setting position period used for position peroid mode trigger of counter module.
' Unit : Sets from 'AxcMotSetMoveUnitPerPulse'.
Public Declare Function AxcTriggerSetPosPeriod Lib "AXL.dll" (ByVal lChannelNo As Long, ByVal dPeriod As Double) As Long


' Verifying position period used for position peroid mode trigger of counter module.
Public Declare Function AxcTriggerGetPosPeriod Lib "AXL.dll" (ByVal lChannelNo As Long, ByRef dpPeriod As Double) As Long


' Setting a valid function about position increase/decrease when using trigger of position period mode of counter module.
' dwDirection -->  0x00 : Output every trigger period.(About counter increase/decrease)
' dwDirection -->  0x01 : Output every trigger period.(About counter increase)
' dwDirection -->  0x01 : Output every trigger period.(About counter decrease)
Public Declare Function AxcTriggerSetDirectionCheck Lib "AXL.dll" (ByVal lChannelNo As Long, ByVal dwDirection As Long) As Long
' Verifying setting value of 'AxcTriggerSetDirectionCheck'.
Public Declare Function AxcTriggerGetDirectionCheck Lib "AXL.dll" (ByVal lChannelNo As Long, ByRef dwpDirection As Long) As Long


' Setting position period and range at once.(About trigger function of position period mode)
' Positioning unit : Set by 'AxcMotSetMoveUnitPerPulse'.
Public Declare Function AxcTriggerSetBlock Lib "AXL.dll" (ByVal lChannelNo As Long, ByVal dLower As Double, ByVal dUpper As Double, ByVal dABSod As Double) As Long


' Verifying setting value of 'AxcTriggerSetBlock'.
Public Declare Function AxcTriggerGetBlock Lib "AXL.dll" (ByVal lChannelNo As Long, ByRef dpLower As Double, ByRef dpUpper As Double, ByRef dpABSod As Double) As Long


' Setting pulse width of trigger output of counter module.
' Unit : uSec
Public Declare Function AxcTriggerSetTime Lib "AXL.dll" (ByVal lChannelNo As Long, ByVal dTrigTime As Double) As Long


' Verifying setting value of 'AxcTriggerSetTime'.
Public Declare Function AxcTriggerGetTime Lib "AXL.dll" (ByVal lChannelNo As Long, ByRef dpTrigTime As Double) As Long


' Setting output level of trigger output pulse of counter module.
' dwLevel -->  0x00 : Low level output.(When trigger is output)
' dwLevel -->  0x01 : High level output.(When trigger is output)
Public Declare Function AxcTriggerSetLevel Lib "AXL.dll" (ByVal lChannelNo As Long, ByVal dwLevel As Long) As Long
' Verifying setting value of 'AxcTriggerSetLevel'.
Public Declare Function AxcTriggerGetLevel Lib "AXL.dll" (ByVal lChannelNo As Long, ByRef dwpLevel As Long) As Long


' Setting frequency for Frequency trigger output function of counter module.
' Unit : Hz, Range : 1Hz ~ 500 kHz
Public Declare Function AxcTriggerSetFreq Lib "AXL.dll" (ByVal lChannelNo As Long, ByVal dwFreqency As Long) As Long
' Verifying setting value of 'AxcTriggerSetFreq'.
Public Declare Function AxcTriggerGetFreq Lib "AXL.dll" (ByVal lChannelNo As Long, ByRef dwpFreqency As Long) As Long


    Public Declare Function AxcTriggerGetTriggerOutCount Lib "AXL.dll" (ByVal lChannelNo As Long, ByRef dwpTriggerOutCount As Long) As Long
    Public Declare Function AxcTriggerSetTriggerOutCount Lib "AXL.dll" (ByVal lChannelNo As Long, ByVal dwTriggerOutCount As Long) As Long



' Setting the value of universal output about appoint channel of counter module.
' dwOutput range : 0x00 ~ 0x0F, Four universal outputs for each channel.
Public Declare Function AxcSignalWriteOutput Lib "AXL.dll" (ByVal lChannelNo As Long, ByVal dwOutput As Long) As Long


' Verifying the value of universal output about appoint channel of counter module.
Public Declare Function AxcSignalReadOutput Lib "AXL.dll" (ByVal lChannelNo As Long, ByRef dwpOutput As Long) As Long


' Setting the value by bit of universal output about appoint channel of counter module.
' lBitNo range : 0 ~ 3, Four universal outputs for each channel.
Public Declare Function AxcSignalWriteOutputBit Lib "AXL.dll" (ByVal lChannelNo As Long, ByVal lBitNo As Long, ByVal uOnOff As Long) As Long
' Verifying the value by bit of universal output about appoint channel of counter module.
' lBitNo range : 0 ~ 3
Public Declare Function AxcSignalReadOutputBit Lib "AXL.dll" (ByVal lChannelNo As Long, ByVal lBitNo As Long, ByRef upOnOff As Long) As Long


' Check the general-purpose input value for the designated channel of the counter module.
Public Declare Function AxcSignalReadInput Lib "AXL.dll" (ByVal lChannelNo As Long, ByRef dwpInput As Long) As Long


' Verifying the value by bit of universal input about appoint channel of counter module.
' lBitNo range : 0 ~ 3
Public Declare Function AxcSignalReadInputBit Lib "AXL.dll" (ByVal lChannelNo As Long, ByVal lBitNo As Long, ByRef upOnOff As Long) As Long


' Activating trigger output of counter module.
' Sets whether the trigger output will be finally output according to the currently set function.
Public Declare Function AxcTriggerSetEnable Lib "AXL.dll" (ByVal lChannelNo As Long, ByVal dwUsage As Long) As Long


' Verifying setting value of 'AxcTriggerSetEnable'.
Public Declare Function AxcTriggerGetEnable Lib "AXL.dll" (ByVal lChannelNo As Long, ByRef dwpUsage As Long) As Long


' Verifying RAM contents for absolute trigger function of counter module.
' dwAddr range : 0x0000 ~ 0x1FFFF;
Public Declare Function AxcTriggerReadAbsRamData Lib "AXL.dll" (ByVal lChannelNo As Long, ByVal dwAddr As Long, ByRef dwpData As Long) As Long


' Setting RAM contents for absolute trigger function of counter module.
' dwAddr range : 0x0000 ~ 0x1FFFF;
Public Declare Function AxcTriggerWriteAbsRamData Lib "AXL.dll" (ByVal lChannelNo As Long, ByVal dwAddr As Long, ByVal dwData As Long) As Long


' Setting RAM contents at once for absolute trigger function of counter module.
' dwTrigNum range : ~ 0x20000  In the case of *RTEX CNT2  0x200*
' dwDirection --> 0x0 : Input trigger information first about lower limit trigger position. Used for trigger output(In direction of increasing position).
' dwDirection --> 0x1 : Input trigger information first about upper limit trigger position. Used for trigger output(In direction of decreasing position).
Public Declare Function AxcTriggerSetAbs Lib "AXL.dll" (ByVal lChannelNo As Long, ByVal dwTrigNum As Long, ByRef dwTrigPos As Long, ByVal dwDirection As Long) As Long


' Set the contents of the RAM required for the absolute position trigger function of the counter module at once.
' dwTrigNum range : 0 ~ 0x20000 (RTEX CNT2 : 0 ~ 0x200)
' dwDirection     : (0) Enter the trigger information for the lower limit trigger position. Used for trigger output in the direction of increasing position.
'                   (1) Enter the trigger information for the upper limit trigger position. Used for trigger output in the direction of decreasing position.
' dTrigPos        : Use trigger position of counter module as double type
Public Declare Function AxcTriggerSetAbsDouble Lib "AXL.dll" (ByVal lChannelNo As Long, ByVal dwTrigNum As Long, ByRef dTrigPos As Double, ByVal dwDirection As Long) As Long

    Public Declare Function AxcTriggerSetEncoderInput Lib "AXL.dll" (ByVal lModuleNo As Long, ByVal dwEncoderInput1 As Long, ByVal dwEncoderInput2 As Long) As Long
    Public Declare Function AxcTriggerGetEncoderInput Lib "AXL.dll" (ByVal lModuleNo As Long, ByRef dwpEncoderInput1 As Long, ByRef dwpEncoderInput2 As Long) As Long

    Public Declare Function AxcTableSetTriggerLevel Lib "AXL.dll" (ByVal lModuleNo As Long, ByVal lTablePos As Long, ByVal uLevel As Long) As Long
    Public Declare Function AxcTableGetTriggerLevel Lib "AXL.dll" (ByVal lModuleNo As Long, ByVal lTablePos As Long, ByRef upLevel As Long) As Long

    Public Declare Function AxcTableSetTriggerTime Lib "AXL.dll" (ByVal lModuleNo As Long, ByVal lTablePos As Long, ByVal dTriggerTimeUSec As Double) As Long
    Public Declare Function AxcTableGetTriggerTime Lib "AXL.dll" (ByVal lModuleNo As Long, ByVal lTablePos As Long, ByRef dpTriggerTimeUSec As Double) As Long

    Public Declare Function AxcTableSetEncoderInput Lib "AXL.dll" (ByVal lModuleNo As Long, ByVal lTablePos As Long, ByVal uEncoderInput1 As Long, ByVal uEncoderInput2 As Long) As Long
    Public Declare Function AxcTableGetEncoderInput Lib "AXL.dll" (ByVal lModuleNo As Long, ByVal lTablePos As Long, ByRef upEncoderInput1 As Long, ByRef upEncoderInput2 As Long) As Long


    Public Declare Function AxcTableSetTriggerOutport Lib "AXL.dll" (ByVal lModuleNo As Long, ByVal lTablePos As Long, ByVal uTriggerOutport As Long) As Long
    Public Declare Function AxcTableGetTriggerOutport Lib "AXL.dll" (ByVal lModuleNo As Long, ByVal lTablePos As Long, ByRef upTriggerOutport As Long) As Long

    Public Declare Function AxcTableSetErrorRange Lib "AXL.dll" (ByVal lModuleNo As Long, ByVal lTablePos As Long, ByVal dErrorRange As Double) As Long
    Public Declare Function AxcTableGetErrorRange Lib "AXL.dll" (ByVal lModuleNo As Long, ByVal lTablePos As Long, ByRef dpErrorRange As Double) As Long

    Public Declare Function AxcTableTriggerOneShot Lib "AXL.dll" (ByVal lModuleNo As Long, ByVal lTablePos As Long) As Long

    Public Declare Function AxcTableTriggerPatternShot Lib "AXL.dll" (ByVal lModuleNo As Long, ByVal lTablePos As Long, ByVal lTriggerCount As Long, ByVal uTriggerFrequency As Long) As Long
    Public Declare Function AxcTableGetPatternShotData Lib "AXL.dll" (ByVal lModuleNo As Long, ByVal lTablePos As Long, ByRef lpTriggerCount As Long, ByRef upTriggerFrequency As Long) As Long

    Public Declare Function AxcTableSetTriggerMode Lib "AXL.dll" (ByVal lModuleNo As Long, ByVal lTablePos As Long, ByVal uTrigMode As Long) As Long
    Public Declare Function AxcTableGetTriggerMode Lib "AXL.dll" (ByVal lModuleNo As Long, ByVal lTablePos As Long, ByRef upTrigMode As Long) As Long
    Public Declare Function AxcTableSetTriggerCountClear Lib "AXL.dll" (ByVal lModuleNo As Long, ByVal lTablePos As Long) As Long

    Public Declare Function AxcTableSetTriggerData Lib "AXL.dll" (ByVal lModuleNo As Long, ByVal lTablePos As Long, ByVal lTriggerDataCount As Long, ByRef dpTriggerData As Double, ByRef lpTriggerCount As Long, ByRef dpTriggerInterval As Double) As Long
    Public Declare Function AxcTableGetTriggerData Lib "AXL.dll" (ByVal lModuleNo As Long, ByVal lTablePos As Long, ByRef lpTriggerDataCount As Long, ByRef dpTriggerData As Double, ByRef lpTriggerCount As Long, ByRef dpTriggerInterval As Double) As Long

    Public Declare Function AxcTableSetTriggerDataEx Lib "AXL.dll" (ByVal lModuleNo As Long, ByVal lTablePos As Long, ByVal lTriggerDataCount As Long, ByVal uOption As Long, ByRef dpTriggerData As Double) As Long
    Public Declare Function AxcTableGetTriggerDataEx Lib "AXL.dll" (ByVal lModuleNo As Long, ByVal lTablePos As Long, ByRef lpTriggerDataCount As Long, ByRef upOption As Long, ByRef dpTriggerData As Double) As Long

    Public Declare Function AxcTableSetTriggerDataClear Lib "AXL.dll" (ByVal lModuleNo As Long, ByVal lTablePos As Long) As Long
